--- a/repl.html
+++ b/repl.html
@@ -163,8 +163,7 @@
           <div class="markmap-wrapper">
             <textarea class="w-full h-full p-1"></textarea>
           </div>
-          <iframe   title="Markmap Interactive Visualization" 
-		  aria-label="Markmap Interactive Visualization" class="markmap-wrapper" src="./inner.html"></iframe>
+          <iframe class="markmap-wrapper" src="/inner.html"></iframe>
           <div class="text-sm text-gray-400 hidden md:block">
             markmap-lib@0.17.3-alpha.2,markmap-view@0.17.3-alpha.1,markmap-render@0.17.3-alpha.1 R1
           </div>
